--- a/VirtualApp/app/build.gradle
+++ b/VirtualApp/app/build.gradle
@@ -29,7 +29,7 @@ android {
         android {
             defaultConfig {
                 ndk {
-                    abiFilters "arm64-v8a", "x86_64"
+                    abiFilters "armeabi-v7a"
                 }
             }
         }
@@ -43,10 +43,6 @@ android {
             if (keyFile.exists()) {
                 signingConfig signingConfigs.config
             }
-        }
-
-        fdroid {
-            dimension 'main'
         }
     }
     sourceSets {
