--- a/VirtualApp/lib/build.gradle
+++ b/VirtualApp/lib/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName "1.0"
         externalNativeBuild {
             ndkBuild {
-                abiFilters "arm64-v8a", "x86_64"
+                abiFilters "arm64-v8a", "armeabi-v7a"
             }
         }
     }
