--- a/VirtualApp/build.gradle
+++ b/VirtualApp/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         }
 //        jcenter()
         maven {url 'https://maven.aliyun.com/repository/jcenter' }
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -29,6 +30,7 @@ allprojects {
         }
 //        jcenter()
         maven {url 'https://maven.aliyun.com/repository/jcenter' }
+        jcenter()
     }
 }
 
