--- a/VirtualApp/lib/build.gradle
+++ b/VirtualApp/lib/build.gradle
@@ -6,12 +6,12 @@ android {
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         externalNativeBuild {
             ndkBuild {
-                abiFilters "arm64-v8a", "armeabi-v7a"
+                abiFilters "armeabi-v7a"
             }
         }
     }
